--- a/cv.html
+++ b/cv.html
@@ -95,6 +95,9 @@
             fill: #3498db;
         }
         @media (max-width: 768px) {
+                body {
+                padding: 15px;
+            }
             header {
                 flex-direction: column;
             }
@@ -103,8 +106,35 @@
                 text-align: left;
             }
             nav a {
+                display: inline-block;
+                margin: 5px 10px 5px 0;
+            }
+            .social-links {
+                margin-top: 10px;
+            }
+            .social-links a {
+                margin-right: 10px;
+            }
+            .social-links svg {
+                width: 22px;
+                height: 22px;
+            }
+            h1 {
+                font-size: 1.8em;
+            }
+            .section h3 {
+                font-size: 1.5em;
+            }
+            .separator {
+                width: 50%;
+            }
+            .job {
+                padding: 10px;
+            }
+            .download-btn {
                 display: block;
-                margin: 10px 0;
+                text-align: center;
+                margin-top: 15px;
             }
         }
     </style>
