--- a/index.html
+++ b/index.html
@@ -57,6 +57,41 @@
         main p {
             margin-bottom: 20px;
         }
+        @media (max-width: 768px) {
+        body {
+            padding: 15px;
+        }
+        header {
+            flex-direction: column;
+        }
+        nav {
+            margin-top: 20px;
+            text-align: left;
+        }
+        nav a {
+            display: inline-block;
+            margin: 5px 10px 5px 0;
+        }
+        .social-links {
+            margin-top: 10px;
+        }
+        .social-links a {
+            margin-right: 10px;
+        }
+        .social-links svg {
+            width: 22px;
+            height: 22px;
+        }
+        h1 {
+            font-size: 1.8em;
+        }
+        h2 {
+            font-size: 1.2em;
+        }
+        .separator {
+            width: 50%;
+        }
+    }
     </style>
 </head>
 <body>
