--- a/cv.html
+++ b/cv.html
@@ -94,20 +94,48 @@
             height: 24px;
             fill: #3498db;
         }
+        .menu-toggle {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+        .menu-toggle span {
+            width: 25px;
+            height: 3px;
+            background-color: #333;
+            margin: 3px 0;
+            transition: 0.4s;
+        }
         @media (max-width: 768px) {
-                body {
+            body {
                 padding: 15px;
             }
             header {
                 flex-direction: column;
             }
+            .menu-toggle {
+                display: flex;
+            }
             nav {
-                margin-top: 20px;
-                text-align: left;
+                display: none;
+                width: 100%;
+                text-align: center;
+                padding: 20px 0;
+                background-color: #f8f9fa;
+                position: absolute;
+                top: 60px;
+                left: 0;
+                z-index: 1000;
+            }
+            nav.active {
+                display: block;
             }
             nav a {
-                display: inline-block;
-                margin: 5px 10px 5px 0;
+                display: block;
+                margin: 10px 0;
             }
             .social-links {
                 margin-top: 10px;
@@ -140,6 +168,11 @@
     </style>
 </head>
 <body>
+    <div class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     <header>
         <div>
             <h1>Daniele D'Avino</h1>
@@ -168,7 +201,6 @@
     </div>
 
     <div class="separator"></div>
-
 
     <div class="section">
         <h3>Summary</h3>
@@ -278,5 +310,11 @@
     <div class="separator"></div>
 
     <a href="attachments/cv_daniele_davino.pdf" download class="download-btn">Download CV</a>
+
+    <script>
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+            document.querySelector('nav').classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
