--- a/index.html
+++ b/index.html
@@ -57,44 +57,77 @@
         main p {
             margin-bottom: 20px;
         }
-        @media (max-width: 768px) {
-        body {
-            padding: 15px;
-        }
-        header {
+        .menu-toggle {
+            display: none;
             flex-direction: column;
+            cursor: pointer;
+            position: absolute;
+            top: 20px;
+            right: 20px;
         }
-        nav {
-            margin-top: 20px;
-            text-align: left;
+        .menu-toggle span {
+            width: 25px;
+            height: 3px;
+            background-color: #333;
+            margin: 3px 0;
+            transition: 0.4s;
         }
-        nav a {
-            display: inline-block;
-            margin: 5px 10px 5px 0;
+        @media (max-width: 768px) {
+            body {
+                padding: 15px;
+            }
+            header {
+                flex-direction: column;
+            }
+            .menu-toggle {
+                display: flex;
+            }
+            nav {
+                display: none;
+                width: 100%;
+                text-align: center;
+                padding: 20px 0;
+                background-color: #f8f9fa;
+                position: absolute;
+                top: 60px;
+                left: 0;
+                z-index: 1000;
+            }
+            nav.active {
+                display: block;
+            }
+            nav a {
+                display: block;
+                margin: 10px 0;
+            }
+            .social-links {
+                margin-top: 10px;
+            }
+            .social-links a {
+                margin-right: 10px;
+            }
+            .social-links svg {
+                width: 22px;
+                height: 22px;
+            }
+            h1 {
+                font-size: 1.8em;
+            }
+            h2 {
+                font-size: 1.2em;
+            }
+            .separator {
+                width: 50%;
+            }
         }
-        .social-links {
-            margin-top: 10px;
-        }
-        .social-links a {
-            margin-right: 10px;
-        }
-        .social-links svg {
-            width: 22px;
-            height: 22px;
-        }
-        h1 {
-            font-size: 1.8em;
-        }
-        h2 {
-            font-size: 1.2em;
-        }
-        .separator {
-            width: 50%;
-        }
-    }
     </style>
 </head>
 <body>
+    <div class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     <header>
         <div>
             <h1>Daniele D'Avino</h1>
@@ -132,5 +165,11 @@
         <p>Equipped with Python, SQL, GIT, Docker, and more, I navigate these challenges with the curiosity of a quantitative analyst and the expertise of a seasoned data scientist.</p>
         <p>And as Bayes would have it, my journey is far from over. It's an ongoing quest to innovate, solve problems, and build bridges between technology and business strategy. Here's to continuing this incredible journey with creativity, collaboration, and a touch of Bayesian flair!</p>
     </main>
+
+    <script>
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+            document.querySelector('nav').classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
