add blog articles links

--- a/blog.html
+++ b/blog.html
@@ -39,12 +39,18 @@
 
     <main>
         <div class="blog-post">
-            <h2>Title Post 1</h2>
-            <div class="blog-post-date"> 30/06/2023</div>
-            <p class="blog-post-excerpt">
+            <h2>Parallel API Calls</h2>
+            <div class="blog-post-date"> 22/07/2024</div>
+            <!--<p class="blog-post-excerpt">
                 Short summary for the post...
-            </p>
-            <a href="#" class="read-more">Read here</a>
+            </p>-->
+            <a href="https://gist.github.com/davins90/e66bcbcfe6b349e393c3b8ca6434d31e" target="_blank" class="read-more">Read here</a>
+        </div>
+
+        <div class="blog-post">
+            <h2>Docker Container for sniffing activity in Jupyter Lab</h2>
+            <div class="blog-post-date"> 15/07/2024</div>
+            <a href="https://gist.github.com/davins90/debb86ce4bf376900f18d756c315145f" target="_blank" class="read-more">Read here</a>
         </div>
 
         <!-- Puoi aggiungere più post seguendo lo stesso modello -->
