--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,12 @@
 
     <main>
         <div class="blog-post">
+            <h2>AI & ML Considerations: ongoing update...</h2>
+            <div class="blog-post-date"> 23/07/2024</div>
+            <a href="https://gist.github.com/davins90/49a2fec50a4552a92329ed534589c3e6" target="_blank" class="read-more">Read here</a>
+        </div>
+
+        <div class="blog-post">
             <h2>Parallel API Calls</h2>
             <div class="blog-post-date"> 22/07/2024</div>
             <!--<p class="blog-post-excerpt">
