changing info + images

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Trisha Singh</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/png" href="images/ (2).ico" />
 </head>
 <body>
     <div class="menu-toggle">
@@ -15,13 +16,15 @@
     </div>
     <nav>
         <a href="index.html" class="active">Home</a>
-        <a href="cv.html">CV</a>
-        <a href="blog.html">Blog</a>
+        <a href="blog.html">Projects</a>
+        <a href="cv.html">Reccomended Lists</a>
     </nav>
     <header>
         <div>
+             <!-- Front Picture -->
+    
+            <img src="images/trisha pfp Small.png" alt="video illustration" width="300" height="200">
             <h1>Trisha Singh</h1>
-            <h2>Student & Website Designer</h2>
 
             <div class="social-links">
                 <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
@@ -37,21 +40,27 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
                 </a>
             </div>
+            <div class="contact-info">
+                <p>Ontario-Canada</p>
+                <p>Phone: +1 123-456-7890</p>
+            </div>
         </div>
-    </header>
 
+    </header>
 
 
     <div class="separator"></div>
 
     <main>
         <p>Hello, I'm Trisha!</p>
-        <p>I'm a Machine Learning Engineer with a deep passion for transforming data into actionable insights and cloud-based AI solutions.</p>
-        <p>How would I describe my professional evolution? Think of it as a perpetual Bayesian update of my skills. From delving into the depths of complex datasets to navigating the intricacies of cloud computing, I've embarked on a thrilling journey in the world of machine learning and AI.</p>
-        <p>My path has been a blend of qualitative and quantitative explorations. I've journeyed through the realms of statistical modeling, traversed the landscapes of machine learning algorithms, and now find myself at the forefront of cloud technology, especially within the Google Cloud Platform.</p>
-        <p>I'm not just about crunching numbers or coding algorithms. It's about translating complex concepts into tangible solutions, mastering classification, regression, clustering, and beyond. Every step is an exciting adventure in decoding the language of data.</p>
-        <p>Equipped with Python, SQL, GIT, Docker, and more, I navigate these challenges with the curiosity of a quantitative analyst and the expertise of a seasoned data scientist.</p>
-        <p>And as Bayes would have it, my journey is far from over. It's an ongoing quest to innovate, solve problems, and build bridges between technology and business strategy. Here's to continuing this incredible journey with creativity, collaboration, and a touch of Bayesian flair!</p>
+        <p>I'm a currently going into grade 7 but I have a very strong intrest in coding/programming. I also like to play sports, paticularly Tennis and Track. I play lots of chess and also have been learning many languages including French, and Punjabi.</p>
+        <p>Recently I have been practicing Onshape so that I can make 3d printed designs to sell. One of my most famous (and only) projects that I have is a pencil holder shaped as a chess rook.</p>
+        <p>In sports, I have been practicing for 2-3 hours everyday, I have been using tips from all my coaches but most importantly, I've learnt the most from my amazing sister, Anya.</p>
+        <p>I used to play lots of chess, and have participated in many tournaments, of course my chess skills are nothing compared to my amazing sister's capabilities as she has taught me everything I know.</p>
+        <p>Along with playing chess, sports and learning coding, I also have been learning languages on duolingo such as punjabi and french. On duolingo I currently have a 906 day streak (Aug 14 2023). 
+            Of course, my motivation to learn new languages was Anya, she installed Duolingo for my mom a few years ago. My mom left, but I have taken over the account and have been working for about 4 years now.</p>
+        <p>Anya is not only my sister, but she is my teacher, friend, and guide. Almost everything I have done is insperation from Anya. Thank you Anya for giving my the motivation to make a personal website, playing tennis, and most importantly to work hard! </p>
+        
     </main>
 
     <script>
