--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon (2).ico" />
 </head>
 <body>
     <div class="menu-toggle">
@@ -16,8 +17,9 @@
     </div>
     <nav>
         <a href="index.html">Home</a>
-        <a href="blog.html" class="active">Projects</a>
+        <a href="blog.html"class="active">Gallery</a>
         <a href="cv.html">Reccomended Lists</a>
+        <a href="art.html">Art</a>
 
     </nav>
     <header>
@@ -64,26 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div class="portfolio-card">
-                <div class="portfolio-box shadow">
-                    <img src="images/portfolio/trisha anya b-day.png" alt="portfolio 3 image" title="portfolio 3 picture">
-                    <div class="portfolio-info">
-                        <div class="caption">
-                            <h4>Mockup project one</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-card">
-                <div class="portfolio-box shadow">
-                    <img src="images/portfolio/trisha anya.png" alt="portfolio 4 image" title="portfolio 4 picture">
-                    <div class="portfolio-info">
-                        <div class="caption">
-                            <h4>Mockup project one</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <div class="portfolio-card">
                 <div class="portfolio-box shadow">
                     <img src="images/portfolio/family tennis 1.png" alt="portfolio 5 image" title="portfolio 5 picture">
@@ -94,16 +77,7 @@
                     </div>
                 </div>
             </div>
-            <div class="portfolio-card">
-                <div class="portfolio-box shadow">
-                    <img src="images/portfolio/trisha papa forest.png" alt="portfolio 6 image" title="portfolio 6 picture">
-                    <div class="portfolio-info">
-                        <div class="caption">
-                            <h4>Mockup project one</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <div class="portfolio-card">
                 <div class="portfolio-box shadow">
                     <img src="images/portfolio/trisha soccer.png" alt="portfolio 7 image" title="portfolio 7 picture">
@@ -126,7 +100,7 @@
             </div>
             <div class="portfolio-card">
                 <div class="portfolio-box shadow">
-                    <img src="images/portfolio/trisha b-ball.png" alt="portfolio 9 image" title="portfolio 9 picture">
+                    <img src="images/portfolio/trisha b-ball.png" alt="portfolio 9 image" title="portfolio 9 picture" class="fix-image">
                     <div class="portfolio-info">
                         <div class="caption">
                             <h4>Mockup project one</h4>
@@ -134,6 +108,7 @@
                     </div>
                 </div>
             </div>
+            
             <!-- Add more portfolio cards as needed -->
         </div>
     </main>
