--- a/cv.html
+++ b/cv.html
@@ -17,9 +17,9 @@
     </div>
     <nav>
         <a href="index.html">Home</a>
-        <a href="blog.html">Gallery</a>
+        <!--<a href="blog.html">Gallery</a>-->
         <a href="cv.html" class="active">Reccomended Lists </a>
-        <a href="art.html">Art</a>
+        <!--<a href="art.html">Art</a>-->
 
     </nav>
     <header>
