--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <nav>
         <a href="index.html" class="active">Home</a>
-        <a href="blog.html">Gallery</a>
+        <!--<a href="blog.html">Gallery</a>-->
         <a href="cv.html">Reccomended Lists</a>
-        <a href="art.html">Art</a>
+        <!--<a href="art.html">Art</a>-->
     </nav>
     <header>
         <div>
