--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="it">
 <head>
     <meta charset="UTF-8">
@@ -109,7 +109,6 @@
                 </div>
             </div>
             
-            <!-- Add more portfolio cards as needed -->
         </div>
     </main>
 
@@ -126,4 +125,4 @@
         });
     </script>
 </body>
-</html>
+</html> -->
